<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.yazdipour.ydm.Account">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="48dp"
        android:paddingTop="8dp"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/card_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="48dp">

            <TextView
                android:id="@+id/tv_user_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_refresh"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_refresh_black_24dp" />

                <TextView
                    android:id="@+id/tv_user_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="fonts/moon.otf"
                    android:gravity="center_horizontal"
                    android:textSize="58sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/tv_under_account"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_charge"
                android:layout_width="@dimen/button_width_about_page"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/ic_account_balance_wallet_black_24dp"
                android:text="@string/tv_charge" />

            <Button
                android:id="@+id/btn_err"
                android:layout_width="@dimen/button_width_about_page"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_report_problem_black_24dp"
                android:text="@string/tv_err" />

            <Button
                android:id="@+id/btn_uwp"
                android:layout_width="@dimen/button_width_about_page"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_desktop_windows_black_24dp"
                android:text="@string/ydm_windows10" />

            <Button
                android:id="@+id/btn_apps"
                android:layout_width="@dimen/button_width_about_page"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_apps_black_24dp"
                android:text="@string/tv_otherapps" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/tv_version" />

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:src="@drawable/avatar"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

    </android.support.v7.widget.CardView>

</FrameLayout>
