<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_white"
    android:orientation="vertical">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <FrameLayout
            android:id="@+id/topFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgBg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/playbtn" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_ramotion"
                app:layout_constraintBottom_toBottomOf="@+id/imgBg"
                app:layout_constraintEnd_toEndOf="@+id/imgBg"
                app:layout_constraintStart_toStartOf="@+id/imgBg"
                app:layout_constraintTop_toTopOf="@+id/imgBg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="16dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:maxLines="3"
                    android:textColor="#ffffff"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="#eee"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="#EEEEEE"
                    android:textSize="20sp" />
            </LinearLayout>

        </FrameLayout>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:menu_animationDelayPerItem="50"
            app:menu_backgroundColor="@android:color/transparent"
            app:menu_colorRipple="#99FFFFFF"
            app:menu_fab_size="normal"
            app:menu_icon="@drawable/ic_play_for_work_white_24dp"
            app:menu_labels_colorNormal="#333333"
            app:menu_labels_colorPressed="#444444"
            app:menu_labels_colorRipple="#66FFFFFF"
            app:menu_labels_cornerRadius="3dp"
            app:menu_labels_ellipsize="none"
            app:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            app:menu_labels_margin="0dp"
            app:menu_labels_maxLines="-1"
            app:menu_labels_padding="4dp"
            app:menu_labels_position="left"
            app:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            app:menu_labels_showShadow="true"
            app:menu_labels_textColor="#FFFFFF"
            app:menu_labels_textSize="14sp"
            app:menu_openDirection="up"
            app:menu_shadowColor="#66000000"
            app:menu_shadowRadius="4dp"
            app:menu_shadowXOffset="1dp"
            app:menu_shadowYOffset="3dp"
            app:menu_showShadow="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/btn_stream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play_circle_filled_white_24dp"
                app:fab_colorNormal="@android:color/holo_green_light"
                app:fab_colorPressed="@android:color/holo_green_dark"
                app:fab_colorRipple="@color/_shark"
                app:fab_label="Play"
                app:fab_showShadow="true"
                app:fab_size="normal" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/btn_dl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_file_download_white_24dp"
                app:fab_colorNormal="@color/_shark"
                app:fab_colorPressed="@color/_blackSide"
                app:fab_colorRipple="@color/_white"
                app:fab_label="Download"
                app:fab_showShadow="true"
                app:fab_size="normal" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_white_24dp"
                app:fab_colorNormal="#1bcdef"
                app:fab_colorPressed="#1bcdef"
                app:fab_colorRipple="@color/_shark"
                app:fab_label="Share Download Link"
                app:fab_showShadow="true"
                app:fab_size="normal" />

        </com.github.clans.fab.FloatingActionMenu>

        <TextView
            android:id="@+id/tv_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="24dp"
            android:text="@string/choose_quality"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="parent" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tv_size"
            app:layout_constraintStart_toStartOf="@+id/tv_choose" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/spinner" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_yt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/copy_youtube_link" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close" />
    </LinearLayout>

</LinearLayout>